Bug 112827 - Main menu bar not reversed when running RTL UI (Gtk3)
Summary: Main menu bar not reversed when running RTL UI (Gtk3)
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
6.0.0.0.alpha0+
Hardware: All Linux (All)
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:6.0.0 target:5.4.3
Keywords:
: 112834 (view as bug list)
Depends on:
Blocks: Main-Menu GTK3 RTL-UI
  Show dependency treegraph
 
Reported: 2017-10-02 14:02 UTC by Yousuf Philips (jay) (retired)
Modified: 2024-08-02 23:21 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
screenshot (88.48 KB, image/png)
2017-10-02 14:02 UTC, Yousuf Philips (jay) (retired)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Yousuf Philips (jay) (retired) 2017-10-02 14:02:11 UTC
Created attachment 136690 [details]
screenshot

steps:
1. start writer in gtk3 mode with arabic UI
2. main menu bar will be on the left when it should be on the right

doesnt happen in gtk2 backend

Version: 6.0.0.0.alpha0+
Build ID: a2a3e06a29077d4274dc15eea28a01afe22e3658
CPU threads: 2; OS: Linux 4.4; UI render: default; VCL: gtk3; 
Locale: en-US (en_US.UTF-8); Calc: group
Comment 1 Caolán McNamara 2017-10-02 20:18:18 UTC
This might be due to a sideeffect of the gettext changes. I have a fix anyway.
Comment 2 Xisco Faulí 2017-10-02 22:46:07 UTC
*** Bug 112834 has been marked as a duplicate of this bug. ***
Comment 3 Xisco Faulí 2017-10-02 22:49:08 UTC
*** Bug 112846 has been marked as a duplicate of this bug. ***
Comment 4 Commit Notification 2017-10-03 09:04:43 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=addd1c34502b959e329354d73808c222986d4b74

Resolves: tdf#112827 gtk3 menubar not RTL under RTL locales

It will be available in 6.0.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Yousuf Philips (jay) (retired) 2017-10-04 19:50:30 UTC
Caolan: Can we get this backported into 4.2?
Comment 6 Lior Kaplan 2017-10-04 21:51:59 UTC
(In reply to Yousuf Philips (jay) from comment #5)
> Caolan: Can we get this backported into 4.2?
https://gerrit.libreoffice.org/#/c/43147/
Comment 7 Commit Notification 2017-10-05 08:38:06 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-5-4":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=bcff0081ab7f46c9edc77b23d304f51133c28eca&h=libreoffice-5-4

Resolves: tdf#112827 gtk3 menubar not RTL under RTL locales

It will be available in 5.4.3.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.