Resolves: tdf#112827 gtk3 menubar not RTL under RTL locales

Change-Id: Icb2fa621e1f7da1e2d4bd221c8e1d8677cc956a2
Reviewed-on: https://gerrit.libreoffice.org/43057
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>