vcl/source/app/settings.cxx
@@ -2845,10 +2845,7 @@ namespace
 
         if( nUIMirroring == 0 )  // no config found (eg, setup) or default (nil) was set: check language
         {
-            LanguageType aLang = LANGUAGE_DONTKNOW;
-            ImplSVData* pSVData = ImplGetSVData();
-            if ( pSVData->maAppData.mpSettings )
-                aLang = pSVData->maAppData.mpSettings->GetUILanguageTag().getLanguageType();
+            LanguageType aLang = SvtSysLocaleOptions().GetRealUILanguageTag().getLanguageType();
             if (bMath)
                 bRTL = MsLangId::isRightToLeftMath( aLang );
             else
